  complex special functions have been merged from CMU CL sources.
  (When I was first setting up SBCL, I misunderstood a compile-time
  conditional #-OLD-SPECFUN, and so accidentally deleted them.)
* improved support for type intersection and union, fixing bug 12
  (e.g., now (SUBTYPEP 'KEYWORD 'SYMBOL)=>T,T) and some other
  more obscure bugs as well
* Christophe Rhodes has made some debian packages of sbcl at
  <http://www-jcsu.jesus.cam.ac.uk/ftp/pub/debian/lisp>.
  From his sbcl-devel e-mail of 2001-04-08 they're not completely
  stable, but are nonetheless usable. When he's ready, I'd be happy
  to add them to the SourceForge "File Releases" section. (And if
  anyone wants to do RPMs or *BSD packages, they'd be welcome too.)
* new fasl file format version number (because of changes in 
  internal representation of (OR ..) types to accommodate the new
  support for (AND ..) types, among other things)

planned incompatible changes in 0.7.x:
* The debugger prompt sequence now goes "5]", "5[2]", "5[3]", etc.
  as you get deeper into recursive calls to the debugger command loop,
  instead of the old "5]", "5]]", "5]]]" sequence. (I was motivated
  to do this when ILISP and SBCL got into arguments which left me
  deeply nested in the debugger.)
* When the profiling interface settles down, it might impact TRACE.
  They both encapsulate functions, and it's not clear yet how
  e.g. UNPROFILE will interact with TRACE and UNTRACE. (This shouldn't
  matter, though, unless you are using profiling. If you never 
  profile anything, TRACE should continue to behave as before.)
* The fasl file extension may change, perhaps to ".fasl".
* The default output representation for unprintable ASCII characters 
  which, unlike e.g. #\Newline, don't have names defined in the 
  ANSI Common Lisp standard, may change to their ASCII symbolic
  names: #\Nul, #\Soh, #\Stx, etc.
* INTERNAL-TIME-UNITS-PER-SECOND might increase, e.g. to 1000.